# axum-sandpit

./: Cargo.toml  README.md
assets/: a.txt
src/: main.rs
