[package]
name = "axum-sandpit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.2"
# Extras include the SPA
axum-extra = {version = "0.4.2", features=[ "spa" ] }

#
tokio = {version="1.24.1", features = ["full"] }

# Serde needed for de-ser and derive of path params
serde = { version = "1.0.152", features=["derive"] }
